// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stability should render correctly 1`] = `
<div>
  <div
    class="stability stabilityLevel0"
  >
    docs.api.stability
  </div>
</div>
`;

exports[`Stability should render correctly 2`] = `
<div>
  <div
    class="stability stabilityLevel1"
  >
    docs.api.stability
  </div>
</div>
`;

exports[`Stability should render correctly 3`] = `
<div>
  <div
    class="stability stabilityLevel2"
  >
    docs.api.stability
  </div>
</div>
`;

exports[`Stability should render correctly 4`] = `
<div>
  <div
    class="stability stabilityLevel3"
  >
    docs.api.stability
  </div>
</div>
`;
